--- a/setup.cfg
+++ b/setup.cfg
@@ -25,3 +25,8 @@ ignore_missing_imports = True
 warn_unused_ignores = True
 warn_redundant_casts = True
 warn_unused_configs = True
+
+
+[coverage:run]
+include = ocr_pipelines/*
+omit = *tests*
