--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,8 @@ force_grid_wrap = 0
 use_parentheses = true
 
 [mypy]
-python_version = 3.8
+python_version = 3.9
+exclude = test_*.py
 check_untyped_defs = True
 ignore_missing_imports = True
 warn_unused_ignores = True
